unpackaged/objects/copado__Selenium_Group_Test_Suite__c.object
<CustomObject>
	<fields>
		<fullName>copado__External_Id__c</fullName>
		<externalId>true</externalId>
		<label>External Id</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Group__c</fullName>
		<label>Selenium Test Group</label>
		<referenceTo>copado__Selenium_Test_Group__c</referenceTo>
		<relationshipLabel>Selenium Group Test Suites</relationshipLabel>
		<relationshipName>Selenium_Group_Test_Suites</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Suite__c</fullName>
		<label>Selenium Test Suite</label>
		<referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
		<relationshipLabel>Selenium Group Test Suites</relationshipLabel>
		<relationshipName>Selenium_Group_Test_Suites</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Selenium Group Test Suite</label>
	<nameField>
		<displayFormat>TGTS-{00000}</displayFormat>
		<label>Selenium Group Test Suite Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Selenium Group Test Suites</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>